# smail

./: CMakeLists.txt  LICENSE  Smail.pro  chancevariable.cpp  chancevariable.h  chancevariable.ui  email.h  generator.cpp  generator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  random.cpp  random.h  reception.cpp  reception.h  service.cpp  service.h  system.cpp  system.h
